--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       Experience()
     </div>
 
-      <div class="internship">
+      <div class="internship ui">
         <div class="card-body">
           <div class= "card-text">
             <h2>UI / UX Engineer</h2>
@@ -88,7 +88,7 @@
        </div>
 
 
-       <div class="internship">
+       <div class="internship ws">
         <img src="img/wealthskey.png" id="internImg">
         <div class="card-body">
           <div class= "card-text">
