font-size updates

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <!----------------------------background photo starts- s--------------------------->
   <div class="background">
-    <img src="img/me.png" id="img-fluid">
+    <img src="img/terry.png" id="img-fluid">
     <div class="heading-content">
       I am Terry Choi,<br>
       A Creative Student Developer.
