--- a/index.html
+++ b/index.html
@@ -241,17 +241,17 @@
       <span>
         <i class="fa fa-phone me-3"style="color: #7DB7FF; font-size:2vw"></i> + 852 6894 4604</p>
       </span>
-      <div class="contact-header"> Download my <a href="./img/cv.pdf" download style="color:#7DB7FF ;">CV</a> </div>
-      <div class="contact-header"> This Website's <a href="https://github.com/1day1commit/ChangWooPortFolio"style="color:#7DB7FF ;">Source Code</a></div>
+      <div class="contact-header"> Download my &nbsp;<a href="./img/cv.pdf" download style="color:#7DB7FF ;">CV</a> </div>
+      <div class="contact-header"> This Website's &nbsp;<a href="https://github.com/1day1commit/ChangWooPortFolio"style="color:#7DB7FF ;">Source Code</a></div>
       
       <!-- <p><i class="fa fa-phone me-3"></i> + 82 10 8552 0493</p> -->
     </div>
   
       <div class="snsIcons">
-        <a href='https://www.instagram.com/chaaaangwoo'><i class="fa fa-instagram" style="color: #7DB7FF; font-size:5vw"></i></a>
-        <a href='https://www.facebook.com/profile.php?id=100007825336628'><i class="fa fa-facebook" style="color: #7DB7FF; font-size:5vw"></i></a>
-        <a href='https://github.com/1day1commit'><i class="fa fa-github"style="color: #7DB7FF; font-size:5vw"></i></a>
-        <a href='https://www.linkedin.com/in/choi-chang-woo-terry-5898b2233/'><i class="fa fa-linkedin"style="color: #7DB7FF; font-size:5vw"></i></a>
+        <a href='https://www.instagram.com/chaaaangwoo'><i class="fa fa-instagram" style="color: #7DB7FF; font-size:35px"></i></a>
+        <a href='https://www.facebook.com/profile.php?id=100007825336628'><i class="fa fa-facebook" style="color: #7DB7FF; font-size:35px"></i></a>
+        <a href='https://github.com/1day1commit'><i class="fa fa-github"style="color: #7DB7FF; font-size:35px"></i></a>
+        <a href='https://www.linkedin.com/in/choi-chang-woo-terry-5898b2233/'><i class="fa fa-linkedin"style="color: #7DB7FF; font-size:35px"></i></a>
       </div>
     </div>
 
