--- a/index.html
+++ b/index.html
@@ -212,14 +212,7 @@
         </div>
       </div>
 
-      <div class="skill-box">
-        <span class="skill-subTitle">JavaScript</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-            style="width:80%">
-          </div>
-        </div>
-      </div>
+
       <div class="skill-box">
         <span class="skill-subTitle">JavaScript</span>
         <div class="progress">
@@ -237,23 +230,7 @@
           </div>
         </div>
       </div>
-      <div class="skill-box">
-        <span class="skill-subTitle">React.js</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-            style="width:75%">
-          </div>
-        </div>
-      </div>
 
-      <div class="skill-box">
-        <span class="skill-subTitle">Python</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-            style="width:75%">
-          </div>
-        </div>
-      </div>
       <div class="skill-box">
         <span class="skill-subTitle">Python</span>
         <div class="progress">
@@ -271,14 +248,6 @@
           </div>
         </div>
       </div>
-      <div class="skill-box">
-        <span class="skill-subTitle">C / C++</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-            style="width:70%">
-          </div>
-        </div>
-      </div>
 
       <div class="skill-box">
         <span class="skill-subTitle">Java</span>
@@ -288,22 +257,8 @@
           </div>
         </div>
       </div>
-      <div class="skill-box">
-        <span class="skill-subTitle">Java</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-            style="width:65%">
-          </div>
-        </div>
-      </div>
-
-
-
-
-
     </div>
-    <div class="skill-header">LANGUAGES</div>
-    </div>
+
     <div class="skill-header">LANGUAGES</div>
     <div class="skill-boxes">
       <div class="skill-box">
@@ -351,7 +306,6 @@
     </div>
     <div class="contact_box">
       <div class="contact-headers">
-
         <span>
           <i class="fa fa-envelope-o me-3" style="color: #7DB7FF; font-size:2vw"></i>
           changwoochoi2@gmail.com
@@ -372,7 +326,7 @@
         <a href='https://www.facebook.com/profile.php?id=100007825336628'><i class="fa fa-facebook"
             style="color: #7DB7FF; font-size:35px"></i></a>
         <a href='https://github.com/1day1commit'><i class="fa fa-github" style="color: #7DB7FF; font-size:35px"></i></a>
-        <a href='www.linkedin.com/in/changwoochoi'><i class="fa fa-linkedin"
+        <a href='https://www.linkedin.com/in/changwoochoi'><i class="fa fa-linkedin"
             style="color: #7DB7FF; font-size:35px"></i></a>
       </div>
     </div>
