--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="style.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Caveat&family=Lato&family=Nanum+Gothic+Coding&family=Open+Sans:ital,wght@0,400;1,300&family=Permanent+Marker&family=Roboto:wght@100;300;400&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
   <link
     href="https://fonts.googleapis.com/css2?family=Caveat&family=Lato&family=Nanum+Gothic+Coding&family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,800;1,100;1,200;1,300;1,400;1,800&family=Open+Sans:ital,wght@0,400;1,300&family=Permanent+Marker&family=Roboto:wght@100;300;400&display=swap"
     rel="stylesheet">
@@ -55,7 +55,8 @@
     <img src="img/terry.png" id="img-fluid">
     <div class="heading-content">
       I am Terry Choi,<br>
-      A Creative Student Developer.
+      I am a developer who
+      <span id="intro-text"></span><span id="intro-cursor">_</span>
       <span id="feature-text"></span>
       <span class="input-cursor"></span>
     </div>
