--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
       More
       to Come!</h3>
   </section>
+  </div>
 
-  <!-----------------------------Skills ends--------------------------------------->
   <!-----------------------------Skills ends--------------------------------------->
   <!-----------------------------Footer starts--------------------------------------->
 
