--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
           <li class="experience_link">
             <a class="nav-link" href="#experience">Experience</a>
           </li>
+          <li class="projects_link">
+            <a class="nav-link" href="#projects">Experience</a>
+          </li>
           <li class="skills_link">
             <a class="nav-link" href="#skills">Skills</a>
           </li>
@@ -132,8 +135,48 @@
       </div>
     </div>
 
+    <div class="internship ui">
+      <div class="card-body">
+        <div class="card-text">
+          <h2>UI / UX Engineer</h2>
+          <h5>The Hong Kong Polytechnic University, Hong Kong / Aug 2022 - Oct 2022</h5>
+
+          <h4>
+            Worked in the Learning Technology Team in L&D department, which is responsible for developing e-learning
+            courses to the firm and external clients.<br>
+            <span style="font-style:italic;">
+              • Participated in 10+ Web E-learning development projects, using html/css/javascript, storyline 360 and
+              other relevant software.<br>
+              • Arrange and Conduct UAT (User Acceptance Testing) of e-learning products. <br>
+              • Communicate with Course Managers / Project Managers for project objectives and produce review versions
+              and make amendments according to their requirements. <br>
+          </h4>
+        </div>
+      </div>
+    </div>
 
     <div class="internship ui">
+      <div class="card-body">
+        <div class="card-text">
+          <h2>Web Developer</h2>
+          <h5>Wealthskey Limited, Hong Kong / May 2022 - July 2022</h5>
+          <h4>
+            Worked as an intern in a start-up company that provides immigration, education and IT related services and
+            solutions.<br>
+            <span style="font-style:italic; ">
+              • UI / UX design, logo branding design renewal<br>
+              • Frontend Web development and implementation using html / css(scss) / node.js / react.js, etc <br>
+              • Utilization of various libraries such as React Router for page routing, il8next for implementation of
+              Multi-language function.<br>
+              • Web hosting & publishing using netlify, Godaddy
+            </span>
+          </h4>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- <div class="internship ui">
       <div class="card-body">
         <div class="card-text">
           <h2>UI / UX Engineer</h2>
@@ -181,22 +224,87 @@
               style="font-size:4vw"></i></a>
         </div>
       </div>
-    </div>
-
-    <div class="card-text">
-      <h2>Signal Operator</h2>
-      <h5>Republic of Korean Army (ROKA), Korea / Jun 2020 - Dec 2021</h5>
-      <h4>Performed Compulsory military service for 18 months.
-        <span style="font-style:italic; ">
-          • Worked as a signal operator that deals with army communication, such as preventive maintenance on
-          communication equipments, and activating connections between subordinary units of a brigade.<br>
-          • Led a team of 10+ as a squad leader to participate in military exercises and battle drills. <br>
-        </span>
-      </h4>
+    </div> -->
+    <div class="internship_last">
+      <div class="card-text">
+        <h2>Sergeant, Republic of Korea Army</h2>
+        <h5>Republic of Korean Army (ROKA), Korea / Jun 2020 - Dec 2021</h5>
+        <h4>Performed Compulsory military service for 18 months.
+          <span id="exp_last" style="font-style:italic; ">
+            • Worked as a signal operator that deals with army communication, such as preventive maintenance on
+            communication equipments, and activating connections between subordinary units of a brigade.<br>
+            • Led a team of 10+ as a squad leader to participate in military exercises and battle drills. <br>
+          </span>
+        </h4>
+      </div>
     </div>
   </div>
 
+
   <!-----------------------------Experience ends--------------------------------------->
+  <!-----------------------------Projects Starts--------------------------------------->
+
+  <div id="projects" class="projects">
+    <div class="post-heading text-center">
+      Projects()
+    </div>
+    <div class="internship ui">
+      <div class="card-body">
+        <div class="card-text">
+          <h2>PolyU Student Mobile App - PolyULife</h2>
+          <h5>The Hong Kong Polytechnic University, Hong Kong / Aug 2022 - Oct 2022</h5>
+
+          <h4>
+            PolyULife is a native mobile app which facilitates students the access of essential information for study
+            such as personal class and exam timetable, payment due date, study information and push notifications to
+            support students’ studies at PolyU.<br>
+            <br>
+            <span style="font-style:italic;">
+              • As a student assistant in ITS(Information Technology Services) Office, Solely responsible for UI / UX,
+              App logo, branding
+              <br>
+              • Performed UI/UX testing and App implementation on the client
+              side using JavaScript, React native, Android Studio, etc. <br>
+          </h4>
+        </div>
+      </div>
+      <img src="img/uiux.png" id="ptImg">
+
+    </div>
+    <a href="https://apps.apple.com/us/app/polyulife/id6444471174" style="color:#7DB7FF; padding-left:0%;">
+      <img src="img/apple.png" width="200" height="150">
+    </a>
+    <!-- <a href="https://play.google.com/store/apps/details?id=com.polyulife&pli=1" style="color:#7DB7FF"><img
+        src="img/google.png" width="200" height="150"></a>  -->
+
+
+
+    <div class="internship ws">
+      <img src="img/wealthskey.png" id="internImg">
+      <div class="card-body">
+        <div class="card-text">
+          <h2>Web Developer</h2>
+          <h5>Wealthskey Limited, Hong Kong / May 2022 - July 2022</h5>
+          <h4>
+            Worked as an intern in a start-up company that provides immigration, education and IT related services and
+            solutions.<br>
+            <span style="font-style:italic; ">
+              • UI / UX design, logo branding design renewal<br>
+              • Frontend Web development and implementation using html / css(scss) / node.js / react.js, etc <br>
+              • Utilization of various libraries such as React Router for page routing, il8next for implementation of
+              Multi-language function.<br>
+              • Web hosting & publishing using netlify, Godaddy
+            </span>
+          </h4>
+          <a href="https://www.charter-rich.com/" style="color:#7DB7FF; padding-left:0%;"><i class="fa fa-link"
+              style="font-size:4vw"></i></a>
+          <a href="https://github.com/1day1commit/CharterRich" style="color:#7DB7FF"><i class="fa fa-github"
+              style="font-size:4vw"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-----------------------------Projects Ends--------------------------------------->
   <!-----------------------------Skills starts--------------------------------------->
   <section id="skills" class="skills">
     <div class="post-heading text-center">
