--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
             <a class="nav-link active" aria-current="page" href="#">About</a>
           </li>
           <li class="experience_link">
-            <a class="nav-link" href="#experience">Experience</a>
+            <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="projects_link">
-            <a class="nav-link" href="#projects">Experience</a>
+            <a class="nav-link" href="#experience">Experience</a>
           </li>
           <li class="skills_link">
-            <a class="nav-link" href="#skills">Skills</a>
+            <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="contact_link">
             <a class="nav-link" href="#contact">Contact</a>
@@ -84,7 +84,126 @@
   </div>
   </div>
   <!-----------------------------About(Home) ends--------------------------------------->
+  <!-----------------------------Skills starts--------------------------------------->
+  <section id="skills" class="skills">
+    <div class="post-heading text-center">
+      Skills()
+    </div>
+    <div class="skill-header">STRONG LANGUAGE SKILLS
+      <span class="small-line-break"></span>
+      <br>
+      <h3 class="skill-others">Speaking and Writting Languages: <b>English &#x1F1EC;&#x1F1E7;, Chinese
+          &#x1F1E8;&#x1F1F3;, Korean</b>
+        &#x1F1F0;&#x1F1F7;
+        <br>
+        Basic level: <b>Cantonese &#x1F1ED;&#x1F1F0;</b>
+      </h3>
 
+    </div>
+    <!-- <div class="skill-boxes">
+      <div class="skill-box">
+        <span class="skill-subTitle">English</span>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
+            style="width:95%">
+          </div>
+        </div>
+      </div>
+
+
+      <div class="skill-box">
+        <span class="skill-subTitle">Chinese(PutongHua)</span>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
+            style="width:95%">
+          </div>
+        </div>
+      </div>
+
+
+      <div class="skill-box">
+        <span class="skill-subTitle">Korean</span>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
+            style="width:100%">
+          </div>
+        </div>
+      </div> -->
+    </div>
+    <div class="skill-header">PROGRAMMING SKILLS &#x1F4BB;</div>
+    <div class="skill-boxes">
+      <div class="skill-box">
+        <span class="skill-subTitle">Python</span>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+            style="width:90%">
+          </div>
+        </div>
+      </div>
+
+
+      <div class="skill-box">
+        <span class="skill-subTitle">C</span>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
+            style="width:80%">
+          </div>
+        </div>
+      </div>
+
+      <div class="skill-box">
+        <span class="skill-subTitle">C++</span>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+            style="width:75%">
+          </div>
+        </div>
+      </div>
+
+      <div class="skill-box">
+        <span class="skill-subTitle">Java</span>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+            style="width:75%">
+          </div>
+        </div>
+      </div>
+
+      <div class="skill-box">
+        <span class="skill-subTitle">C / C++</span>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+            style="width:70%">
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="skill-box">
+        <span class="skill-subTitle">Shell</span>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+            style="width:65%">
+          </div>
+        </div>
+      </div> -->
+    </div>
+    <div class="skill-header">WEB & APP DEVELOPMENT &#x1F310;
+      <h3 class="skill-others">html/css, javascript, React.js, React Native, Node.js, Flutter, Android Studio, Firebase,
+        Mongo
+        DB,
+        AWS, and always EAGER to learn more! &#x1F525; </h3>
+    </div>
+
+
+    <div class="skill-header">OTHER SKILLS & KNOWLEDGE
+      <h3 class="skill-others">Git Version Control, UI/UX design, Wordpress, Web Hosting & Publishing, SQL, and...
+        More to Come! </h3>
+    </div>
+
+  </section>
+  </div>
+
+  <!-----------------------------Skills ends--------------------------------------->
 
   <!-----------------------------Experience starts--------------------------------------->
   <div id="experience" class="experience">
@@ -266,16 +385,18 @@
               • Performed UI/UX testing and App implementation on the client
               side using JavaScript, React native, Android Studio, etc. <br>
           </h4>
+          <a href="https://apps.apple.com/us/app/polyulife/id6444471174" style="color:#7DB7FF; padding-left:0%;">
+            <img src="img/appstore.png" id="appstore">
+          </a>
+          <a href="https://play.google.com/store/apps/details?id=com.polyulife&pli=1" style="color:#7DB7FF"><img
+              src="img/googleplay.png" id="googleplay"></a>
         </div>
       </div>
       <img src="img/uiux.png" id="ptImg">
 
     </div>
-    <a href="https://apps.apple.com/us/app/polyulife/id6444471174" style="color:#7DB7FF; padding-left:0%;">
-      <img src="img/apple.png" width="200" height="150">
-    </a>
-    <!-- <a href="https://play.google.com/store/apps/details?id=com.polyulife&pli=1" style="color:#7DB7FF"><img
-        src="img/google.png" width="200" height="150"></a>  -->
+
+
 
 
 
@@ -283,15 +404,15 @@
       <img src="img/wealthskey.png" id="internImg">
       <div class="card-body">
         <div class="card-text">
-          <h2>Web Developer</h2>
+          <h2>E-commerce website</h2>
           <h5>Wealthskey Limited, Hong Kong / May 2022 - July 2022</h5>
           <h4>
-            Worked as an intern in a start-up company that provides immigration, education and IT related services and
-            solutions.<br>
+            I was solely responsible for building this website including the company branding, UI / UX design and web
+            implementation.<br>
             <span style="font-style:italic; ">
-              • UI / UX design, logo branding design renewal<br>
-              • Frontend Web development and implementation using html / css(scss) / node.js / react.js, etc <br>
-              • Utilization of various libraries such as React Router for page routing, il8next for implementation of
+              • Frontend Web development and implementation using React.js, html / css(scss) / node.js, etc <br>
+              • Utilization of popular React libraries such as Redux, Styled Components, and il8next for implementation
+              of
               Multi-language function.<br>
               • Web hosting & publishing using netlify, Godaddy
             </span>
@@ -305,108 +426,7 @@
     </div>
   </div>
   <!-----------------------------Projects Ends--------------------------------------->
-  <!-----------------------------Skills starts--------------------------------------->
-  <section id="skills" class="skills">
-    <div class="post-heading text-center">
-      Skills()
-    </div>
-    <div class="skill-header">KEY SKILLS</div>
-    <div class="skill-boxes">
-      <div class="skill-box">
-        <span class="skill-subTitle">html / css</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-            style="width:90%">
-          </div>
-        </div>
-      </div>
 
-
-      <div class="skill-box">
-        <span class="skill-subTitle">JavaScript</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-            style="width:80%">
-          </div>
-        </div>
-      </div>
-
-      <div class="skill-box">
-        <span class="skill-subTitle">React.js</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-            style="width:75%">
-          </div>
-        </div>
-      </div>
-
-      <div class="skill-box">
-        <span class="skill-subTitle">Python</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-            style="width:75%">
-          </div>
-        </div>
-      </div>
-
-      <div class="skill-box">
-        <span class="skill-subTitle">C / C++</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-            style="width:70%">
-          </div>
-        </div>
-      </div>
-
-      <div class="skill-box">
-        <span class="skill-subTitle">Java</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-            style="width:65%">
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="skill-header">LANGUAGES</div>
-    <div class="skill-boxes">
-      <div class="skill-box">
-        <span class="skill-subTitle">English</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-            style="width:95%">
-          </div>
-        </div>
-      </div>
-
-
-      <div class="skill-box">
-        <span class="skill-subTitle">Chinese(PutongHua)</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-            style="width:95%">
-          </div>
-        </div>
-      </div>
-
-
-      <div class="skill-box">
-        <span class="skill-subTitle">Korean</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
-            style="width:100%">
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="skill-header">OTHER SKILLS & KNOWLEDGE</div>
-    <h3 class="skill-others">Git Version Control, Figma, Wordpress, Web Hosting & Publishing, SQL, MongoDB, and...
-      More
-      to Come!</h3>
-  </section>
-  </div>
-
-  <!-----------------------------Skills ends--------------------------------------->
   <!-----------------------------Footer starts--------------------------------------->
 
   <div id="contact" class="contact">
