--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
             support students’ studies at PolyU.<br>
             <br>
             <span style="font-style:italic;">
-              • As a student assistant in ITS(Information Technology Services) Office, Solely responsible for UI / UX,
-              App logo, branding
+              • As a student assistant in ITS(Information Technology Services) Office, designed the final version of UI
+              / UX, App logo, branding of the mobile application.
               <br>
               • Performed UI/UX testing and App implementation on the client
               side using JavaScript, React native, Android Studio, etc. <br>
