--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <!----------------------------background photo starts- s--------------------------->
   <!----------------------------background photo starts- s--------------------------->
   <div class="background">
-    <img src="img/terry.png" id="img-fluid">
+    <img src="img/me.png" id="img-fluid">
     <div class="heading-content">
       I am Terry Choi,<br>
       I am a developer who
@@ -151,14 +151,14 @@
         </div>
       </div>
 
-      <div class="skill-box">
+      <!-- <div class="skill-box">
         <span class="skill-subTitle">C++</span>
         <div class="progress">
           <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
             style="width:75%">
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="skill-box">
         <span class="skill-subTitle">Java</span>
@@ -169,14 +169,14 @@
         </div>
       </div>
 
-      <div class="skill-box">
+      <!-- <div class="skill-box">
         <span class="skill-subTitle">C / C++</span>
         <div class="progress">
           <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
             style="width:70%">
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- <div class="skill-box">
         <span class="skill-subTitle">Shell</span>
