--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
           </li>
           <li class="experience_link">
             <a class="nav-link" href="#skills">Skills</a>
+          <li class="skills_link">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
           </li>
           <li class="projects_link">
             <a class="nav-link" href="#experience">Experience</a>
-          </li>
-          <li class="skills_link">
-            <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="contact_link">
             <a class="nav-link" href="#contact">Contact</a>
@@ -89,46 +89,16 @@
     <div class="post-heading text-center">
       Skills()
     </div>
-    <div class="skill-header">STRONG LANGUAGE SKILLS
+    <div class="skill-header">LANGUAGE SKILLS &#127757;
       <span class="small-line-break"></span>
       <br>
-      <h3 class="skill-others">Speaking and Writting Languages: <b>English &#x1F1EC;&#x1F1E7;, Chinese
-          &#x1F1E8;&#x1F1F3;, Korean</b>
-        &#x1F1F0;&#x1F1F7;
+      <h3 class="skill-others"><b>Native:</b> English, Mandarin, Korean
         <br>
-        Basic level: <b>Cantonese &#x1F1ED;&#x1F1F0;</b>
+        <b>Basic level:</b> Cantonese
       </h3>
 
     </div>
-    <!-- <div class="skill-boxes">
-      <div class="skill-box">
-        <span class="skill-subTitle">English</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-            style="width:95%">
-          </div>
-        </div>
-      </div>
 
-
-      <div class="skill-box">
-        <span class="skill-subTitle">Chinese(PutongHua)</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-            style="width:95%">
-          </div>
-        </div>
-      </div>
-
-
-      <div class="skill-box">
-        <span class="skill-subTitle">Korean</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
-            style="width:100%">
-          </div>
-        </div>
-      </div> -->
     </div>
     <div class="skill-header">PROGRAMMING SKILLS &#x1F4BB;</div>
     <div class="skill-boxes">
@@ -141,9 +111,17 @@
         </div>
       </div>
 
+      <div class="skill-box">
+        <span class="skill-subTitle">Javascript</span>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+            style="width:60%">
+          </div>
+        </div>
+      </div>
 
       <div class="skill-box">
-        <span class="skill-subTitle">C</span>
+        <span class="skill-subTitle">C/C++</span>
         <div class="progress">
           <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
             style="width:80%">
@@ -151,14 +129,6 @@
         </div>
       </div>
 
-      <!-- <div class="skill-box">
-        <span class="skill-subTitle">C++</span>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
-            style="width:75%">
-          </div>
-        </div>
-      </div> -->
 
       <div class="skill-box">
         <span class="skill-subTitle">Java</span>
@@ -188,15 +158,15 @@
       </div> -->
     </div>
     <div class="skill-header">WEB & APP DEVELOPMENT &#x1F310;
-      <h3 class="skill-others">html/css, javascript, React.js, React Native, Node.js, Flutter, Android Studio, Firebase,
+      <h3 class="skill-others">html/css, React.js, React Native, Node.js, Flutter, Android Studio, Firebase,
         Mongo
         DB,
         AWS, and always EAGER to learn more! &#x1F525; </h3>
     </div>
 
 
-    <div class="skill-header">OTHER SKILLS & KNOWLEDGE
-      <h3 class="skill-others">Git Version Control, UI/UX design, Wordpress, Web Hosting & Publishing, SQL, and...
+    <div class="skill-header">OTHER SKILLS
+      <h3 class="skill-others">Git, Linux, Figma, Wordpress, Web Hosting & Publishing, and...
         More to Come! </h3>
     </div>
 
@@ -204,7 +174,99 @@
   </div>
 
   <!-----------------------------Skills ends--------------------------------------->
+  <!-----------------------------Projects Starts--------------------------------------->
 
+
+
+  <div id="projects" class="projects">
+
+    <div class="post-heading text-center">
+      Projects()
+    </div>
+
+    <div class="internship ws">
+      <img src="img/hook.png" id="internImg">
+      <div class="card-body">
+        <div class="card-text">
+          <h2>Artificial Intelligence music hook generator</h2>
+          <h4>
+            This is a web-based AI music hook Generator that can generate melodies and lyrics for music hook
+            composition.<br>
+            <span style="font-style:italic; ">
+              • Developed and trained the RNN-LSTM Model using deep learning libraries, such as tensorflow, keras and
+              music21.<br>
+              • Used OpenAI's GPT4 API for lyrics generation.
+              <br>
+              • html/css/javascript, flask for web development
+            </span>
+          </h4>
+          <a href=" https://ai-music-hook-generator-6844f5ac8950.herokuapp.com/ "
+            style="color:#7DB7FF; padding-left:0%;"><i class="fa fa-link" style="font-size:4vw"></i></a>
+          <a href="https://github.com/1day1commit/AI_Melody_Generator" style="color:#7DB7FF"><i class="fa fa-github"
+              style="font-size:4vw"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="internship ui">
+      <div class="card-body">
+        <div class="card-text">
+          <h2>PolyU Student Mobile App - PolyULife</h2>
+          <h5>The Hong Kong Polytechnic University, Hong Kong / Aug 2022 - Oct 2022</h5>
+
+          <h4>
+            PolyULife is a native mobile app which facilitates students the access of essential information for study
+            such as personal class and exam timetable, payment due date, study information and push notifications to
+            support students’ studies at PolyU.<br>
+            <br>
+            <span style="font-style:italic;">
+              • As a student assistant in ITS(Information Technology Services) Office, designed the final version of UI
+              / UX, App logo, branding of the mobile application.
+              <br>
+              • Performed UI/UX testing and App implementation on the client
+              side using JavaScript, React native, Android Studio, etc. <br>
+          </h4>
+          <a href="https://apps.apple.com/us/app/polyulife/id6444471174" style="color:#7DB7FF; padding-left:0%;">
+            <img src="img/appstore.png" id="appstore">
+          </a>
+          <a href="https://play.google.com/store/apps/details?id=com.polyulife&pli=1" style="color:#7DB7FF"><img
+              src="img/googleplay.png" id="googleplay"></a>
+        </div>
+      </div>
+      <img src="img/uiux.png" id="ptImg">
+    </div>
+
+
+
+
+
+    <div class="internship ws">
+      <img src="img/wealthskey.png" id="internImg">
+      <div class="card-body">
+        <div class="card-text">
+          <h2>E-commerce website</h2>
+          <h5>Wealthskey Limited, Hong Kong / May 2022 - July 2022</h5>
+          <h4>
+            I was solely responsible for building this website including the company branding, UI / UX design and web
+            implementation.<br>
+            <span style="font-style:italic; ">
+              • Frontend Web development and implementation using React.js, html / css(scss) / node.js, etc <br>
+              • Utilization of popular React libraries such as Redux, Styled Components, and il8next for implementation
+              of
+              Multi-language function.<br>
+              • Web hosting & publishing using netlify, Godaddy
+            </span>
+          </h4>
+          <a href="https://www.charter-rich.com/" style="color:#7DB7FF; padding-left:0%;"><i class="fa fa-link"
+              style="font-size:4vw"></i></a>
+          <a href="https://github.com/1day1commit/CharterRich" style="color:#7DB7FF"><i class="fa fa-github"
+              style="font-size:4vw"></i></a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <!-----------------------------Projects Ends--------------------------------------->
   <!-----------------------------Experience starts--------------------------------------->
   <div id="experience" class="experience">
     <div class="post-heading text-center">
@@ -361,71 +423,7 @@
 
 
   <!-----------------------------Experience ends--------------------------------------->
-  <!-----------------------------Projects Starts--------------------------------------->
 
-  <div id="projects" class="projects">
-    <div class="post-heading text-center">
-      Projects()
-    </div>
-    <div class="internship ui">
-      <div class="card-body">
-        <div class="card-text">
-          <h2>PolyU Student Mobile App - PolyULife</h2>
-          <h5>The Hong Kong Polytechnic University, Hong Kong / Aug 2022 - Oct 2022</h5>
-
-          <h4>
-            PolyULife is a native mobile app which facilitates students the access of essential information for study
-            such as personal class and exam timetable, payment due date, study information and push notifications to
-            support students’ studies at PolyU.<br>
-            <br>
-            <span style="font-style:italic;">
-              • As a student assistant in ITS(Information Technology Services) Office, designed the final version of UI
-              / UX, App logo, branding of the mobile application.
-              <br>
-              • Performed UI/UX testing and App implementation on the client
-              side using JavaScript, React native, Android Studio, etc. <br>
-          </h4>
-          <a href="https://apps.apple.com/us/app/polyulife/id6444471174" style="color:#7DB7FF; padding-left:0%;">
-            <img src="img/appstore.png" id="appstore">
-          </a>
-          <a href="https://play.google.com/store/apps/details?id=com.polyulife&pli=1" style="color:#7DB7FF"><img
-              src="img/googleplay.png" id="googleplay"></a>
-        </div>
-      </div>
-      <img src="img/uiux.png" id="ptImg">
-
-    </div>
-
-
-
-
-
-    <div class="internship ws">
-      <img src="img/wealthskey.png" id="internImg">
-      <div class="card-body">
-        <div class="card-text">
-          <h2>E-commerce website</h2>
-          <h5>Wealthskey Limited, Hong Kong / May 2022 - July 2022</h5>
-          <h4>
-            I was solely responsible for building this website including the company branding, UI / UX design and web
-            implementation.<br>
-            <span style="font-style:italic; ">
-              • Frontend Web development and implementation using React.js, html / css(scss) / node.js, etc <br>
-              • Utilization of popular React libraries such as Redux, Styled Components, and il8next for implementation
-              of
-              Multi-language function.<br>
-              • Web hosting & publishing using netlify, Godaddy
-            </span>
-          </h4>
-          <a href="https://www.charter-rich.com/" style="color:#7DB7FF; padding-left:0%;"><i class="fa fa-link"
-              style="font-size:4vw"></i></a>
-          <a href="https://github.com/1day1commit/CharterRich" style="color:#7DB7FF"><i class="fa fa-github"
-              style="font-size:4vw"></i></a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-----------------------------Projects Ends--------------------------------------->
 
   <!-----------------------------Footer starts--------------------------------------->
 
@@ -442,7 +440,8 @@
         <span>
           <i class="fa fa-phone me-3" style="color: #7DB7FF; font-size:2vw"></i> + 852 6894 4604</p>
         </span>
-        <div class="contact-header"> Download my &nbsp;<a href="./img/cv.pdf" download style="color:#7DB7FF ;">CV</a>
+        <div class="contact-header"> Download my &nbsp;<a href="./img/Changwoo_Choi_CV.pdf"
+            style="color:#7DB7FF ;">CV</a>
         </div>
         <div class="contact-header"> This Website's &nbsp;<a href="https://github.com/1day1commit/ChangWooPortFolio"
             style="color:#7DB7FF ;">Source Code</a></div>
