--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <div class="card-text">
           <h2>Artificial Intelligence music hook generator</h2>
           <h4>
-            This is a web-based AI music hook Generator that can generate melodies and lyrics for music hook
+            A web-based AI music hook Generator that can generate melodies and lyrics for music hook
             composition.<br>
             <span style="font-style:italic; ">
               • Developed and trained the RNN-LSTM Model using deep learning libraries, such as tensorflow, keras and
@@ -277,19 +277,18 @@
         <div class="card-text">
           <h2>Full Stack Developer Training Bootcamp</h2>
           <h5>Co-mento, Korea, Jul 2023 – Aug 2023</h5>
-
           <h4>
             Successfully engaged in a 5-week on-the-job training (OJT) boot camp organized by Co-mento Co., Ltd.
             Actively completed practical tasks aligned with the job requirements and met all evaluation
             benchmarks.<br>
             <span style="font-style:italic;">
-              • Leveraged AWS Cloud webserver functionalities, including VPC configuration, subnets setup, and
+              • Leveraged AWS Cloud web server functionalities, including VPC configuration, subnet setup, and
               deployment of EC2 instances, each with distinct security group assignments. <br>
               • Frontend development using html/css/javascript, publish and deployment of static web pages on Apache
-              http server and AWS Elastic Beanstalk.<br>
+              http server and AWS Elastic Beanstalk. <br>
               • 2tier Web server Architecture on WordPress and connection to AWS RDS(Relational Database) with
               implementation of load-balancing feature to the server. <br>
-              • Evaluated server performances using jmeter, constructed lambda function to test and deploy REST API.
+              • Evaluated server performances using jmeter and utilized lambda function to test and deploy REST API.
               <br>
           </h4>
         </div>
@@ -299,18 +298,21 @@
     <div class="internship ui">
       <div class="card-body">
         <div class="card-text">
-          <h2>Developer Intern</h2>
-          <h5>PwC(PricewaterhouseCoopers), Hong Kong, Jan 2023 – Jun 2023</h5>
+          <h2>Web Developer Intern</h2>
+          <h5>PwC, Hong Kong, Jan 2023 – Jun 2023</h5>
 
           <h4>
-            Worked in the Learning Technology Team in L&D department, which is responsible for developing e-learning
-            courses to the firm and external clients.<br>
+            Worked in the Learning & Development department, as a web developer intern.<br>
             <span style="font-style:italic;">
-              • Participated in 10+ Web E-learning development projects, using html/css/javascript, storyline 360 and
-              other relevant software.<br>
-              • Arrange and Conduct UAT (User Acceptance Testing) of e-learning products. <br>
-              • Communicate with Course Managers / Project Managers for project objectives and produce review versions
-              and make amendments according to their requirements. <br>
+              • Developed over 10 web-based e-learning modules, using html/css /JavaScript, Storyline 360 and other
+              in-house software.<br>
+              • Project management responsibilities and cross-disciplinary communication, delivering high-quality
+              projects with multi-functional teams of developers, designers, and project managers to align project
+              objectives and ensure seamless workflow.<br>
+              • Git for robust version control, managing multiple versions of e-learning modules, facilitating efficient
+              team collaboration, and maintaining a consistent development workflow under tight deadlines. <br>
+              • Responsible for User Acceptance Testing (UAT) processes, cooperating with project stakeholders to refine
+              functionality and secure consensus for the software's go-live process. <br>
           </h4>
         </div>
       </div>
@@ -319,18 +321,17 @@
     <div class="internship ui">
       <div class="card-body">
         <div class="card-text">
-          <h2>UI / UX Engineer</h2>
+          <h2>UI / UX Designer & Engineer</h2>
           <h5>The Hong Kong Polytechnic University, Hong Kong / Aug 2022 - Oct 2022</h5>
 
           <h4>
-            Worked in the Learning Technology Team in L&D department, which is responsible for developing e-learning
-            courses to the firm and external clients.<br>
+            Worked in the Information Technology Services Office(ITS) in PolyU, as a student assistant.<br>
             <span style="font-style:italic;">
-              • Participated in 10+ Web E-learning development projects, using html/css/javascript, storyline 360 and
-              other relevant software.<br>
-              • Arrange and Conduct UAT (User Acceptance Testing) of e-learning products. <br>
-              • Communicate with Course Managers / Project Managers for project objectives and produce review versions
-              and make amendments according to their requirements. <br>
+              • Designed and implemented 50+ user interface pages and crafted 20+ unique app logos, ensuring consistency
+              and user engagement.<br>
+              • Frontend App development & testing using html/css/ JavaScript, React Native, and Android Studio, to
+              create responsive and intuitive user experiences. <br>
+              • Use of design tools such as Figma, WordPress, and Photoshop to deliver high-fidelity prototypes <br>
           </h4>
         </div>
       </div>
@@ -342,13 +343,15 @@
           <h2>Web Developer</h2>
           <h5>Wealthskey Limited, Hong Kong / May 2022 - July 2022</h5>
           <h4>
-            Worked as an intern in a start-up company that provides immigration, education and IT related services and
-            solutions.<br>
+            Worked in a start-up company that provides immigration, education and IT related services and solutions, as
+            a web developer intern.<br>
             <span style="font-style:italic; ">
+              • Independently managed a branding project for a client, which included the company’s logo design and the
+              full-stack development of an E-commerce website in desktop and mobile versions. <br>
               • UI / UX design, logo branding design renewal<br>
-              • Frontend Web development and implementation using html / css(scss) / node.js / react.js, etc <br>
-              • Utilization of various libraries such as React Router for page routing, il8next for implementation of
-              Multi-language function.<br>
+              • Frontend Web development using html / css / node.js / react.js, etc.<br>
+              • Leveraged different React libraries to enhance the company’s website, such as React Router for page
+              routing and il8next for implementing Multi-language functions.<br>
               • Web hosting & publishing using netlify, Godaddy
             </span>
           </h4>
